# impalab

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.toml  rustfmt.toml
.agents/: AGENTS.md
.agents/skills/create-component/: SKILL.md
.agents/skills/create-component/assets/: impafile.schema.json
.agents/skills/documenting-impalab/: SKILL.md
.agents/skills/testing-impalab/: SKILL.md
.github/workflows/: ci.yml  release.yml
python-sdk/: README.md  pyproject.toml
python-sdk/src/impalab_py/: __init__.py  colab.py  jsonl.py  lab.py  sdk.py
python-sdk/tests/: test_jsonl.py  test_sdk.py
src/: benchmark.rs  builder.rs  cli.rs  command.rs  config.rs  error.rs  figment_ext.rs  lib.rs  logging.rs  main.rs  manifest.rs
tests/: cli.rs
tests/fixtures/exec-meta-e2e/: impafile.toml
tests/fixtures/gen-meta-e2e/: impafile.toml
tests/fixtures/meta-cmp/: impafile.toml
tests/fixtures/py-algo-e2e/: algo.py  impafile.toml
tests/fixtures/py-exec-e2e/: exec.py  impafile.toml
tests/fixtures/py-gen-e2e/: gen.py  impafile.toml
