[package]
name = "impalab"
version = "0.2.0"
authors = ["Chisomo Makombo Sakala"]
edition = "2024"
description = "A language-agnostic framework for orchestrating micro-benchmarks."
repository = "https://github.com/somombo/impalab"
license = "Apache-2.0"
keywords = ["benchmark", "cli", "orchestration", "performance", "testing"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.release]
publish = false
tag-prefix = "v"
tag-name = "{{version}}"
sign-commit = true
sign-tag = true
allow-branch = ["main"]

[[bin]]
name = "impa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
fs_extra = "1.3.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json = "1.0.145"
tempfile = "3.23.0"
