[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impalab-py"
version = "0.1.0"
description = "Python SDK for Impalab Benchmarking Framework"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Chisomo Makombo Sakala" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
data = [
    "pandas>=1.0.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/impalab_py"]
